<resources>
    <string name="app_name">Seattle Place Search</string>
    <string name="search_hint">Search here</string>
    <string name="search_button_label">Search</string>
    <string name="place_name">Name:</string>
    <string name="place_address">Address:</string>
    <string name="place_categories">Categories:</string>
    <string name="place_distance">Distance:</string>
    <string name="place_related_places">Related Places:</string>
</resources>