<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:alpha="0.7"
    android:layout_margin="@dimen/spacing_middle"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:alpha="0.7"
        android:background="@color/design_default_color_primary_dark"
        android:padding="@dimen/spacing_middle">

        <ImageView
            android:id="@+id/placeImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/place_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/placeImageView"
            app:layout_constraintTop_toTopOf="@+id/placeImageView" />

        <TextView
            android:id="@+id/place_address_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_address"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/placeImageView"
            app:layout_constraintTop_toBottomOf="@+id/place_name_text_view" />

        <TextView
            android:id="@+id/place_distance_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_distance"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/placeImageView"
            app:layout_constraintTop_toBottomOf="@+id/place_address_text_view" />

        <TextView
            android:id="@+id/place_categories_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_categories"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/placeImageView"
            app:layout_constraintTop_toBottomOf="@+id/place_distance_text_view" />

        <TextView
            android:id="@+id/place_related_places_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_related_places"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
